fixed input to label jump and added limit - list heading

--- a/src/Containers/ProConList/ProConList.css
+++ b/src/Containers/ProConList/ProConList.css
@@ -21,6 +21,7 @@
 .listLabelHeading {
   cursor: pointer;
   position: relative;
+  height: 50px;
   z-index: 100;
   display: flex;
   align-items: center;
